# starrocks

./: build.sh
be/: CMakeLists.txt
be/src/block_cache/: CMakeLists.txt  block_cache.cpp  block_cache.h  cache_options.h  cachelib_wrapper.cpp  cachelib_wrapper.h  io_buffer.cpp  io_buffer.h  kv_cache.h  star_cachelib.h  starcache_wrapper.cpp  starcache_wrapper.h  time_based_admission.cpp  time_based_admission.h
be/src/cache/: CMakeLists.txt  block_cache.cpp  block_cache.h  cache_options.h  fb_cachelib.cpp  fb_cachelib.h  kv_cache.h
be/src/common/: config.h
be/src/connector/: hive_connector.cpp  hive_connector.h
be/src/exec/: aggregator.cpp  hash_join_node.cpp  hdfs_scanner.cpp  hdfs_scanner.h
be/src/exec/vectorized/: hdfs_scanner.cpp  hdfs_scanner.h
be/src/http/action/: data_cache_action.cpp  data_cache_action.h  update_config_action.cpp
be/src/io/: CMakeLists.txt  cache_input_stream.cpp  cache_input_stream.h
be/src/runtime/: exec_env.cpp  exec_env.h
be/src/service/: starrocks_main.cpp
be/src/service/service_be/: http_service.cpp  starrocks_be.cpp
be/src/storage/: options.cpp  options.h
be/test/: CMakeLists.txt
be/test/io/: cache_input_stream_test.cpp
fe/fe-core/src/main/java/com/starrocks/catalog/: FunctionSet.java
fe/fe-core/src/main/java/com/starrocks/qe/: SessionVariable.java  SessionVariableConstants.java
fe/fe-core/src/main/java/com/starrocks/sql/optimizer/: Optimizer.java
fe/fe-core/src/main/java/com/starrocks/sql/optimizer/operator/scalar/: ScalarOperator.java
fe/fe-core/src/main/java/com/starrocks/sql/optimizer/rule/transformation/materialization/: AggregatedMaterializedViewRewriter.java  MaterializedViewRewriter.java
fe/fe-core/src/main/java/com/starrocks/sql/optimizer/rule/tree/pdagg/: PushDownAggregateRewriter.java
fe/fe-core/src/main/java/com/starrocks/sql/plan/: PlanFragmentBuilder.java
fe/fe-core/src/test/java/com/starrocks/planner/: MaterializedViewHiveTPCHTest.java  MaterializedViewTPCHTest.java
fe/fe-core/src/test/java/com/starrocks/sql/optimizer/rule/transformation/materialization/: MvRewriteTest.java
fe/fe-core/src/test/java/com/starrocks/sql/plan/: AggregatePushDownTest.java  PruneComplexSubfieldTest.java
gensrc/thrift/: InternalService.thrift
